--- a/index.css
+++ b/index.css
@@ -80,8 +80,8 @@ a{
     text-align: center;
     opacity: 0;
     width: 75%;
-    margin: 50px auto;
-    height: 220px;
+    margin: 50px auto 0 auto;
+    height: fit-content;
 }
 
 .letter-btn{
@@ -98,53 +98,23 @@ a{
 #emptySpaces{
     opacity: 0;
     font-size: 60px;
-    margin-top: 10px;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 300px;
+    height: 200px;
 }
 
 #emptyLetter{
-    margin-left: 40%;
-    margin-right: auto;
-}
-
-#stickman{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 300px;
-    margin-right: 150px;
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
 }
 
-#jsStickmanHead{
-    margin-top: -50px;
-    margin-right: -50px;
-    opacity: 0;
-}
-#jsStickmanMid{
-    opacity: 0;
-}
-#jsStickmanLeftLeg{
-    margin-bottom: -50px;
-    margin-left: -50px;
-    margin-top: 35px;
-    opacity: 0;
-}
-#jsStickmanRightLeg{
-    margin-bottom: -40px;
-    margin-top: 50px;
-    opacity: 0;
-}
-#jsStickmanLeftArm{
-    margin-top: -25px;
-    margin-left: -45px;
-    opacity: 0;
-}
-#jsStickmanRightArm{
-    margin-top: -25px;
-    margin-left: 15px;
-    opacity: 0;
+#lives{
+    font-size: 50px;
+    color: rgb(172, 26, 26);
 }
