--- a/index.css
+++ b/index.css
@@ -151,3 +151,10 @@ a{
     margin-right: 20%;
     font-size: 30px;
 }
+
+embed{
+    height: 0;
+    width: 0;
+    margin: 0;
+    padding: 0;
+}
