--- a/index.css
+++ b/index.css
@@ -148,7 +148,7 @@ a{
 
 #hiScore{
     margin-left: auto;
-    margin-right: 20%;
+    margin-right: 15%;
     font-size: 30px;
 }
 
@@ -157,4 +157,11 @@ embed{
     width: 0;
     margin: 0;
     padding: 0;
+}
+
+img{
+    height: 25px;
+    width: 25px;
+    margin-right: 35px;
+    margin-top: 10px;
 }
