--- a/index.css
+++ b/index.css
@@ -64,6 +64,12 @@ a{
     background-color: rgb(206, 255, 101);
     color: inherit;
     cursor: pointer;
+    transition-duration: 1s;
+}
+
+#headToTitle:hover{
+    color: red;
+    font-size: 30px;
 }
 
 .btns{
@@ -74,6 +80,12 @@ a{
     background-color: rgb(206, 255, 101);
     color: inherit;
     cursor: pointer;
+    transition-duration: 1s;
+}
+
+.btns:hover{
+    font-size: 30px;
+    color: red;
 }
 
 #reset-btn{
@@ -108,6 +120,12 @@ a{
     font-size: 60px;
     cursor: pointer;
     margin-right: 5px;
+    transition-duration: 0.5s;
+}
+
+.letter-btn:hover{
+    font-size: 65px;
+    color: red;
 }
 
 #emptySpaces{
