--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ a{
     color: inherit;
 }
 
-/* GAME HTML */
+/* GAME CSS */
 
 #entireHead{
     display: flex;
@@ -69,7 +69,6 @@ a{
 
 #headToTitle:hover{
     color: red;
-    font-size: 30px;
 }
 
 .btns{
@@ -84,7 +83,6 @@ a{
 }
 
 .btns:hover{
-    font-size: 30px;
     color: red;
 }
 
@@ -107,7 +105,7 @@ a{
     text-align: center;
     opacity: 0;
     width: 75%;
-    margin: 50px auto 0 auto;
+    margin: 0px auto 0 auto;
     height: fit-content;
 }
 
@@ -124,7 +122,6 @@ a{
 }
 
 .letter-btn:hover{
-    font-size: 65px;
     color: red;
 }
 
@@ -147,7 +144,7 @@ a{
     margin-bottom: 20px;
 }
 
-#lives{
+.time_css{
     font-size: 50px;
     color: rgb(172, 26, 26);
 }
@@ -170,16 +167,19 @@ a{
     font-size: 30px;
 }
 
-embed{
-    height: 0;
-    width: 0;
-    margin: 0;
-    padding: 0;
-}
-
 img{
     height: 25px;
     width: 25px;
     margin-right: 35px;
     margin-top: 10px;
+}
+
+#mute{
+    cursor: pointer;
+}
+
+#time_section{
+    display: flex;
+    width: 60%;
+    justify-content: space-evenly;
 }
